--- a/StudentsJournalApp/ru.lproj/Localizable.strings
+++ b/StudentsJournalApp/ru.lproj/Localizable.strings
@@ -1,13 +1,16 @@
-/* 
-  Localizable.strings
-  StudentsJournalApp
-
-  Created by Алексей Слоневский on 02.11.2021.
-  
-*/
-
+"Delete" = "Удалить";
+"Edit" = "Изменить";
 "Journals" = "Журналы";
 "Group" = "Группа";
 "Create journal" = "Добавить журнал";
 "Create student" = "Добавить студента";
 "Create Subject" = "Добавить предмет";
+"Write the group number" = "Напишите номер группы";
+"Write the first name" = "Напишите имя";
+"Write the second name" = "Напишите фамилию";
+"Write the subject's name" = "Напишите название предмета";
+"Write the subject's rating" = "Напишите оценку";
+"Edit group" = "Редактирование группы";
+"Update" = "Изменить";
+"Cancel" = "Отмена";
+"Edit student" = "Редактирование студента";
