--- a/StudentsJournalApp/ru.lproj/Localizable.strings
+++ b/StudentsJournalApp/ru.lproj/Localizable.strings
@@ -4,7 +4,7 @@
 "Group" = "Группа";
 "Create journal" = "Добавить журнал";
 "Create student" = "Добавить студента";
-"Create Subject" = "Добавить предмет";
+"Create subject" = "Добавить предмет";
 "Write the group number" = "Напишите номер группы";
 "Write the first name" = "Напишите имя";
 "Write the second name" = "Напишите фамилию";
