PR fixes + create ValueCell (union subject and student cells)

--- a/StudentsJournalApp/ru.lproj/Localizable.strings
+++ b/StudentsJournalApp/ru.lproj/Localizable.strings
@@ -14,3 +14,4 @@
 "Update" = "Изменить";
 "Cancel" = "Отмена";
 "Edit student" = "Редактирование студента";
+"Unknown student" = "Неизвестный студент";
